# ReminderBot

./: .gitignore  README.md  dockerfile  pyproject.toml
src/bot/: db.py  main.py  paths.py  reminders_cycle.py  settings.py  translations.py
src/bot/states_functions/: __init__.py  _constants.py  language.py  main.py  reminder_creating.py  reminder_viewing.py  start.py  states_class.py
