[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "remindertgbot"
version = "0.0.1"
dependencies = [
    "aiogram <= 3.0.0b7",
    'importlib-metadata; python_version<"3.8"',
]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
include = ["*"]  # ["*"] by default
#exclude = ["mypackage.tests*"]  # empty by default
namespaces = false  # true by default

[project.scripts]
run_reminderbot = "bot:run"
